[gd_scene load_steps=2 format=3 uid="uid://84dm6eq60ka2"]

[ext_resource type="Script" path="res://sky_editor_texture_setting.gd" id="1_u4cei"]

[node name="TextureSetting" type="MarginContainer"]
auto_translate_mode = 1
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_u4cei")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="SettingLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 0
text_overrun_behavior = 3
icon_alignment = 2
expand_icon = true

[connection signal="pressed" from="HBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
